# learning-wgpu

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.py  build_web.py  index.html  pathfinding_wgpu.js  pathfinding_wgpu_bg.wasm  pathfinding_wgpu_web.js  pathfinding_wgpu_web_bg.wasm  useful-commands.md
.cargo/: .gitignore  config.toml
.github/workflows/: deploy.yml
build-web/: Cargo.toml  build-web.rs
build-web/src/: main.rs
src/: color.rs  graphics.rs  lib.rs  main.rs  maze.rs  models.rs  search.rs  shader.wgsl  window.rs
